fix(install): Add missing files to install script

--- a/install
+++ b/install
@@ -58,6 +58,11 @@ main() {
     link_files '.config/tmux'
     link_files '.config/wget'
     link_files '.config/zsh'
+    link_file '.config/zsh/.zlogin'
+    link_file '.config/zsh/.zlogout'
+    link_file '.config/zsh/.zprofile'
+    link_file '.config/zsh/.zshenv'
+    link_file '.config/zsh/.zshrc'
     link_files '.config/zsh/zlogin.d'
     link_files '.config/zsh/zlogout.d'
     link_files '.config/zsh/zprofile.d'
